--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     
     <head>
+<!--
+        Copyright Reserved!
+        kv2000in@gmail.com
+10/10/2018 Todo: Add Select All buttons
+Add more vital signs and improve UI
+-->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Vital Signs Scrapper</title>
@@ -55,25 +61,4 @@
         <li>Sort or Filter your extracted vital sign values, units and timestamps and use it in your analysis</li>
         </ul>
 </body></html>
-<!--
 
-    [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
-    [::::::::::::::      ::::::::::::::]
-    [::::::::::::::      ::::::::::::::]
-    [::::::[[[[[[[:      :]]]]]]]::::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[     CODE THE WEB     ]:::::]
-    [:::::[  http://brackets.io  ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [:::::[                      ]:::::]
-    [::::::[[[[[[[:      :]]]]]]]::::::]
-    [::::::::::::::      ::::::::::::::]
-    [::::::::::::::      ::::::::::::::]
-    [[[[[[[[[[[[[[[      ]]]]]]]]]]]]]]]
-
--->
